--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "axios": "^0.21.1",
     "firebase": "^8.6.8",
     "nanoid": "^3.1.23",
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-image-magnifiers": "^1.4.0",
     "react-router-dom": "^5.2.0",
