--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
     "react-image-magnifiers": "^1.4.0",
     "react-router-dom": "^5.2.0",
