--- a/firebase.json
+++ b/firebase.json
@@ -2,5 +2,14 @@
   "hosting": {
     "public": "build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+  },
+  "rewrites": [
+    {
+      "source": "**",
+      "destination": "/index.html"
+    }
+  ],
+  "functions": {
+    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"]
   }
 }
